--- a/css/styles.css
+++ b/css/styles.css
@@ -3,14 +3,17 @@
 
 * {
 	font-family: 'Raleway', sans-serif;
+	color:#303331;
 }
 body{
-	width: 90%;
-	background:azure;
+	width: 98%;
+	
+	
 }
 nav{
-	background: #DCEDB9;
+	
 	height: 5em;
+	
 	
 }
 ul { 
@@ -18,11 +21,35 @@ ul {
 	display: block;
 }
 li {
-	float: left;
+	float: right;
 	display: inline-block;
-	padding: 30px 30px;
-	
+	padding: 30px 30px;	
 }
 h1 {
 	font-weight: 600;
+}
+a:link { 
+	color:black;
+	text-decoration: none;
+	
+}
+a:visited {
+	color: #303331;
+}
+a:hover {
+	color: dimgrey;
+}
+a:active{
+	color: #303331;
+}
+.mainimg {
+	width: 100%;
+}
+.subimg {
+	width: 31%;
+	padding: 1%;
+}
+footer {
+	float:left;
+	background:
 }
