--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
 body{
 	width: 100%;
 	padding: 0 20px;
+	margin: 0;
 	
 }
 nav{
@@ -26,6 +27,7 @@ li {
 }
 h1 {
 	font-weight: 600;
+	align-text: center;
 }
 a:link { 
 	color:black;
@@ -41,6 +43,11 @@ a:hover {
 }
 a:active{
 	color: #303331;
+	
+}
+/*dropdown menue for the shop page*/
+.dropdown {
+	
 }
 .mainimg {
 	display:block;
@@ -59,12 +66,22 @@ a:active{
 	float:left;
 	width: 20%;
 	padding: 2% 5%;
-	
 }
 
 footer {
 	float:left;
 	background: lightgray;
 	width: 100%;
-	
+}
+/*about page css*/
+.about {
+	width: 30%;
+	display:block;
+	margin: 0 auto;
+}
+
+.abouttxt{
+	display: block;
+	width: 50%;
+	margin: 30px auto;
 }
