--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ body{
 	width: 100%;
 	padding: 0 20px;
 	margin: 0;
+	box-sizing: border-box;
 }
 
 #logo {
@@ -22,7 +23,7 @@ nav{ /*trying to center nav bar*/
 	margin: 0 auto;
 	display: block;
 	width: 90%;
-	
+	box-sizing: border-box;
 }
 ul { 
 	list-style-type: none;
@@ -64,19 +65,30 @@ a:active{
 	display:block;
 	width: 88%;
 	margin:0 auto;
+	box-sizing: border-box;
 	
 }
 /*I faked centering the image because nothing else would work*/
 .subimg {
 	overflow: auto;
-	width:100%;
-	padding-left: 5%;
+	margin: 0 auto;
+	width: 88%;
+	box-sizing: border-box;
 }
 .subimg img {
 	display: block;
-	float:left;
-	width: 20%;
-	padding: 2% 5%;
+	float: left;
+	width: 26.66%;
+	margin: 2% 5%;
+	box-sizing: border-box;
+}
+
+.subimg img:first-of-type {
+	margin-left: 0;
+}
+
+.subimg img:last-of-type {
+	margin-right: 0;
 }
 
 footer {
@@ -84,6 +96,7 @@ footer {
 	background: lightgray;
 	width: 100%;
 	padding-left: 2%;
+	box-sizing: border-box;
 }
 /*about page css*/
 #aboutimg {
