--- a/css/styles.css
+++ b/css/styles.css
@@ -9,93 +9,43 @@ body{
 	width: 100%;
 	margin: 0;
 	box-sizing: border-box;
+	text-align: center;
 }
+
 /*begin nav bar*/
-nav{ 
-	height: auto;
+ul {
+	list-style: none;
+	padding: 0px;
+	margin: 0px;
 	display: inline-block;
-	box-sizing: border-box;
-	word-wrap: break-word;
-	float: right;
-	padding: 13% 5%;
 }
+ul li {
+	  display: inline;
+	  position: relative;
+	  float: center;
+	  border:none;
+}
+ul li a {
+	background: white;
+	padding: 5px 10px 5px 10px;
+	text-decoration: none;
+	color: black;
+}
+a:hover {
+	background: #DEF2F9;
+}
+
+/*end nav bar*/
+
+
+
 #logo {
 	display: inline-block;
 	height: 200px;
 	max-width: 200px;
-	margin: auto;
+	margin: 0 auto;
 	padding: 5%;
 }
-
-ul { 
-	list-style-type: none;
-	display: block;
-	
-	
-	
-}
-li {
-	display: inline-block;
-	padding-left: 20px;
-	margin: 0 auto;
-	float: right;	
-}
-
-a:link { 
-	color:black;
-	text-decoration: none;
-}
-a:visited {
-	color: #303331;
-}
-a:hover {
-	color: black;
-	background-color: #DEF2F9;
-}
-a:active{
-	color: #303331;
-}
-
-/*dropdown menue for the shop page*/
-.dropbutton {
-    background-color: white;
-    color: black;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: white;
-  	z-index: 1;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content a:hover {
-	background-color: #DEF2F9;
-}
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.dropdown:hover .dropbutton {
-    background-color: #DEF2F9;
-}
-/*end nav bar*/
-
 h1 {
 	font-weight: 600;
 	text-align: center;
@@ -140,9 +90,16 @@ footer {
 	float:left;
 	background: #DEF2F9;
 	width: 100%;
-	padding-left: 2%;
+	padding: 2%;
 	box-sizing: border-box;
 	position: relative; 
+}
+/*link for font awesome icons*/
+a:link{
+	text-decoration: none;
+}
+i{
+	padding: 3%;
 }
 /*shop: paintings page*/
 .grid {
