--- a/css/styles.css
+++ b/css/styles.css
@@ -150,12 +150,24 @@ form {
 }
 input {
 	margin: 2%;
+	box-shadow: none;
+	border:solid;
+	border-color: #DEF2F9;
+	border-radius: 4px;
 }
 textarea {
 	margin: 2%;
 	vertical-align: text-top;
 	align-content: center;
 	width: 275px;
+	border-radius: 4px;
+	border:solid;
+	border-color: #DEF2F9;
+}
+.submit {
+	background-color: #DEF2F9;
+	border: thin;
+	border-radius: 4px;
 }
 
 
